Remove global ul style; fixes for flexes

--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
           <a href="index.html" class="logo-link">
             <img class="logo-img" src="img/logo.svg" width="140" height="70" alt="Логотип Седоны.">
           </a>
-          <ul class="navigation-list">
+          <ul class="navigation-list modified-ul">
             <li class="navigation-item">
               <a href="index.html" class="navigation-link">Главная</a>
             </li>
@@ -25,7 +25,7 @@
               <a href="catalog.html" class="navigation-link navigation-link-current">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-user">
+          <ul class="navigation-user modified-ul">
             <li class="navigation-user-item">
               <a class="navigation-user-link" href="#">
                 <span class="visually-hidden">Поиск</span>
@@ -49,7 +49,7 @@
           <div class="filter-background">
             <section class="inner-filter">
               <h1 class="filter-title">Гостиницы Седоны</h1>
-              <ul class="breadcrumbs">
+              <ul class="breadcrumbs modified-ul">
                 <li class="breadcrumbs-item-main">
                   <a class="breadcrumbs-link" href="index.html">
                     <span class="visually-hidden">Главная</span>
@@ -143,7 +143,7 @@
                     Сначала популярные
                   </option>
                 </select>
-                <ul class="housing-list-view">
+                <ul class="housing-list-view modified-ul">
                   <li>
                     <a class="view-cards" href="#">
                       <span class="visually-hidden">
@@ -168,7 +168,7 @@
                 </ul>
               </div>
               <div class="housing-items-wrapper">
-                <ul class="housing-list-items">
+                <ul class="housing-list-items modified-ul">
                   <li class="housing-item">
                     <a class="item-link" href="#">
                       <img class="item-image" src="img/catalog/amara-resort-spa.jpg" width="300" height="212" alt="Ущелье и небо.">
@@ -239,7 +239,7 @@
 
             <section class="pagination">
               <h2 class="visually hidden">Список страниц</h2>
-              <ul class="pagination-list">
+              <ul class="pagination-list modified-ul">
                 <li class="pagination-item">
                   <a class="pagination-link pagination-prev" href="#">1</a>
                 </li>
@@ -280,7 +280,7 @@
 
           <section class="footer-social">
             <h2 class="visually-hidden">Ищите нас в социальных сетях</h2>
-            <ul class="footer-social-list">
+            <ul class="footer-social-list modified-ul">
               <li class="footer-social-item">
                 <a class="social-button" href="https://vk.com/htmlacademy">
                   <svg width="24" height="14" viewBox="0 0 24 14" fill="none" role="img" aria-label="VK" xmlns="http://www.w3.org/2000/svg">
