--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="index.html" class="logo-link">
             <img class="logo-img" src="img/logo.svg" width="140" height="70" alt="Логотип Седоны.">
           </a>
-          <ul class="navigation-list">
+          <ul class="navigation-list modified-ul">
             <li class="navigation-item">
               <a href="index.html" class="navigation-link navigation-link-current">Главная</a>
             </li>
@@ -25,7 +25,7 @@
               <a href="catalog.html" class="navigation-link">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-user">
+          <ul class="navigation-user modified-ul">
             <li class="navigation-user-item">
               <a class="navigation-user-link" href="#">
                 <span class="visually-hidden">Поиск</span>
@@ -44,7 +44,7 @@
         </nav>
       </header>
 
-      <main class="main-container main-page">
+      <main class="main-container">
           <section class="welcome">
             <h2 class="visually-hidden">Добро пожаловать в Седону!</h2>
             <img class="welcome-img" src="img/main/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону!">
@@ -55,36 +55,52 @@
               <h2 class="reasons-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
               <p class="reasons-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
             </div>
-            <ul class="reasons-list">
+            <ul class="reasons-list modified-ul">
               <li class="reasons-item reasons-town">
-                <h3 class="reasons-item-title">Настоящий городок</h3>
-                <p class="reasons-item-description ">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-                <img class="house-trees-img" src="img/main/house-trees.jpg" width="800" height="384" alt="Дом среди деревьев.">
+                <div class="reasons-description-wrapper">
+                  <h3 class="reasons-item-title">Настоящий городок</h3>
+                  <p class="reasons-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                </div>
+                <div class="reasons-image-wrapper">
+                  <img class="reasons-img" src="img/main/house-trees.jpg" width="800" height="384" alt="Дом среди деревьев.">
+                </div>
               </li>
               <li class="reasons-item reasons-area">
-                <h3 class="reasons-item-title">Небольшая площадь</h3>
-                <p class="reasons-item-description">Все достопримечательности находятся очень близко</p>
+                <div class="reasons-description-wrapper">
+                  <h3 class="reasons-item-title">Небольшая площадь</h3>
+                  <p class="reasons-item-description">Все достопримечательности находятся очень близко</p>
+                </div>
               </li>
               <li class="reasons-item reasons-road">
-                <h3 class="reasons-item-title ">Красивая дорога</h3>
-                <p class="reasons-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <div class="reasons-description-wrapper">
+                  <h3 class="reasons-item-title">Красивая дорога</h3>
+                  <p class="reasons-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                </div>
               </li>
               <li class="reasons-item reasons-tourist">
-                <h3 class="reasons-item-title">Мало туристов</h3>
-                <p class="reasons-item-description">Большинство едет в Гранд Каньон и толпится там</p>
+                <div class="reasons-description-wrapper">
+                  <h3 class="reasons-item-title">Мало туристов</h3>
+                  <p class="reasons-item-description">Большинство едет в Гранд Каньон и толпится там</p>
+                </div>
               </li>
               <li class="reasons-item reasons-bridge">
-                <h3 class="reasons-item-title">Там есть мост дьявола</h3>
-                <p class="reasons-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-                <img class="devil-bridge-img" src="img/main/devil-bridge.jpg" width="800" height="384" alt="Мост дьявола.">
+                <div class="reasons-description-wrapper">
+                  <h3 class="reasons-item-title">Там есть мост дьявола</h3>
+                  <p class="reasons-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                </div>
+                <div class="reasons-image-wrapper">
+                  <img class="reasons-img" src="img/main/devil-bridge.jpg" width="800" height="384" alt="Мост дьявола.">
+                </div>
               </li>
             </ul>
           </section>
 
           <section class="services">
-            <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-            <p class="services-description">Опытный персонал и качественное обслуживание!</p>
-            <ul class="services-list">
+            <div class="services-header">
+              <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+              <p class="services-description">Опытный персонал и качественное обслуживание!</p>
+            </div>
+            <ul class="services-list modified-ul">
               <li class="services-item item-housing">
                 <h3 class="services-item-title">Жильё</h3>
                 <p class="services-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
@@ -103,12 +119,11 @@
           <section class="search">
             <h2 class="search-title">Заинтересовались?</h2>
             <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="search-link" href="#">Поиск гостиницы в Седоне</a>
+            <a class="button search-link" href="#">Поиск гостиницы в Седоне</a>
           </section>
       </main>
 
       <footer class="page-footer">
-        <div class="footer-container">
           <section class="footer-subscription">
             <h2 class="footer-subscription-title">Подпишитесь на рассылку</h2>
             <p class="footer-subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -120,7 +135,7 @@
 
           <section class="footer-social">
             <h2 class="visually-hidden">Ищите нас в социальных сетях</h2>
-            <ul class="footer-social-list">
+            <ul class="footer-social-list modified-ul">
               <li class="footer-social-item">
                 <a class="social-button" href="https://vk.com/htmlacademy">
                   <svg width="24" height="14" viewBox="0 0 24 14" fill="none" role="img" aria-label="VK" xmlns="http://www.w3.org/2000/svg">
@@ -168,7 +183,6 @@
                 </svg>
             </a>
           </section>
-        </div>
       </footer>
     </div>
 
