grids for hotel cards

--- a/catalog.html
+++ b/catalog.html
@@ -167,7 +167,6 @@
                   </li>
                 </ul>
               </div>
-              <div class="housing-items-wrapper">
                 <ul class="housing-list-items modified-ul">
                   <li class="housing-item">
                     <a class="item-link" href="#">
@@ -178,28 +177,37 @@
                       <span class="item-type">Гостиница</span>
                       <span class="item-price">От 4000 ₽</span>
                     </div>
-                    <a class="button button-more" href="#">Подробнее</a>
-                    <a class="button button-favorite" href="#">В избранное</a>
-                    <p class="stars stars-four">
-                      <span class="visually-hidden">Звездность гостиницы: 4 звезды</span>
-                    </p>
-                    <span class="item-grade">Рейтинг: 8,5</span>
+                    <div class="item-buttons">
+                      <a class="button button-more" href="#">Подробнее</a>
+                      <a class="button button-favorite" href="#">В избранное</a>
+                    </div>
+                    <div class="item-grades">
+                      <p class="stars stars-four">
+                        <span class="visually-hidden">Звездность гостиницы: 4 звезды</span>
+                      </p>
+                      <span class="item-grade">Рейтинг: 8,5</span>
+                    </div>
                   </li>
                   <li class="housing-item">
                     <a class="item-link" href="#">
-                      <img class="item-image" src="img/catalog/villas-at-poco-diablo.jpg" width="300" height="212" alt="Горы и небо на закате.">
+                      <img class="item-image" src="img/catalog/villas-at-poco-diablo.jpg" width="300" height="212"
+                        alt="Горы и небо на закате.">
                       <h3 class="item-title">Villas at Poco Diablo</h3>
                     </a>
                     <div class="item-type-price">
                       <span class="item-type">Гостиница</span>
                       <span class="item-price">От 5000 ₽</span>
                     </div>
-                    <a class="button button-more" href="#">Подробнее</a>
-                    <a class="button button-favorite button-selected" href="#">В избранном</a>
-                    <p class="stars stars-four">
-                      <span class="visually-hidden">Звездность гостиницы: 4 звезды</span>
-                    </p>
-                    <span class="item-grade">Рейтинг: 9,2</span>
+                    <div class="item-buttons">
+                      <a class="button button-more" href="#">Подробнее</a>
+                      <a class="button button-favorite button-selected" href="#">В избранном</a>
+                    </div>
+                    <div class="item-grades">
+                      <p class="stars stars-four">
+                        <span class="visually-hidden">Звездность гостиницы: 4 звезды</span>
+                      </p>
+                      <span class="item-grade">Рейтинг: 9,2</span>
+                    </div>
                   </li>
                   <li class="housing-item">
                     <a class="item-link" href="#">
@@ -210,35 +218,43 @@
                       <span class="item-type">Гостиница</span>
                       <span class="item-price">От 2500 ₽</span>
                     </div>
-                    <a class="button button-more" href="#">Подробнее</a>
-                    <a class="button button-favorite" href="#">В избранное</a>
-                    <p class="stars stars-three">
-                      <span class="visually-hidden">Звездность гостиницы: 3 звезды</span>
-                    </p>
-                    <span class="item-grade">Рейтинг: 6,9</span>
+                    <div class="item-buttons">
+                      <a class="button button-more" href="#">Подробнее</a>
+                      <a class="button button-favorite" href="#">В избранное</a>
+                    </div>
+                    <div class="item-grades">
+                      <p class="stars stars-three">
+                        <span class="visually-hidden">Звездность гостиницы: 3 звезды</span>
+                      </p>
+                      <span class="item-grade">Рейтинг: 6,9</span>
+                    </div>
                   </li>
                   <li class="housing-item">
                     <a class="item-link" href="#">
-                      <img class="item-image" src="img/catalog/greentree-inn.jpg" width="300" height="212" alt="Небо и горы в оранжевом свечении.">
+                      <img class="item-image" src="img/catalog/greentree-inn.jpg" width="300" height="212"
+                        alt="Небо и горы в оранжевом свечении.">
                       <h3 class="item-title">GreenTree Inn</h3>
                     </a>
                     <div class="item-type-price">
                       <span class="item-type">Гостиница</span>
                       <span class="item-price">От 1500 ₽</span>
                     </div>
-                    <a class="button button-more" href="#">Подробнее</a>
-                    <a class="button button-favorite" href="#">В избранное</a>
-                    <p class="stars stars-two">
-                      <span class="visually-hidden">Звездность гостиницы: 2 звезды</span>
-                    </p>
-                    <span class="item-grade">Рейтинг: 5,0</span>
+                    <div class="item-buttons">
+                      <a class="button button-more" href="#">Подробнее</a>
+                      <a class="button button-favorite" href="#">В избранное</a>
+                    </div>
+                    <div class="item-grades">
+                      <p class="stars stars-two">
+                        <span class="visually-hidden">Звездность гостиницы: 2 звезды</span>
+                      </p>
+                      <span class="item-grade">Рейтинг: 5,0</span>
+                    </div>
                   </li>
                 </ul>
-              </div>
             </section>
 
             <section class="pagination">
-              <h2 class="visually hidden">Список страниц</h2>
+              <h2 class="visually-hidden">Список страниц</h2>
               <ul class="pagination-list modified-ul">
                 <li class="pagination-item">
                   <a class="pagination-link pagination-prev" href="#">1</a>
